Tue Mar  1 21:51:04 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb, here.rb, controller.rb, master.rb,
	  c-basic-group-by.rb, c-cat.rb, c-direct-product.rb, c-filter.rb,
	  c-junction.rb, c-seg-join.rb, c-seg-shuffle.rb, c-seg-split.rb,
	  c-seg-zip.rb, c-sort.rb, c-wc.rb, node.rb, p-barrier.rb,
	  p-basic-group-by.rb, p-direct-product.rb, p-filter.rb, p-find.rb,
	  p-group-by.rb, p-inject.rb, p-output-file.rb, p-seg-join.rb,
	  p-seg-zip.rb, p-sort.rb, p-wc.rb, processor.rb, log.rb,
	  pool-dictionary.rb, port.rb, reference.rb, varray.rb, vfile.rb:
	  xthread対応

Thu Dec  9 19:11:40 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port-marshaled-queue.rb, port.rb, log-analysis.rb: ログ解析機能を強化

Mon Dec  6 16:57:10 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* tools/cap_recipe/Capfile: install, uninstall タスクに問題があった.

Mon Dec  6 11:12:07 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy-0.6.0-001 release

Wed Dec  1 18:01:00 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.gemspec: ext以下もパッケージするようにした.

Wed Dec  1 17:18:16 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* logger.rb: MARK_INTERVALがnilの時の対応をした

Wed Dec  1 16:03:30 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.gemspec: ちょっと修正

Tue Nov 30 20:00:03 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* output-local-file.rb: REQ#201対応

Tue Nov 30 19:58:56 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* input-file.rb, output-file.rb, wc.rb: 余分な化石コードの削除

Tue Nov 30 19:26:21 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, c-basic-group-by.rb: デバックコード削除

Mon Nov 29 20:34:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: デバックコード挿入 その3(BUG#294対応)

Thu Nov 25 19:26:27 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy: 下ので修正忘れ.
	*fairy.gemspec: -001以外はサブマイナーバージョンをつけるようにした.

Thu Nov 25 19:16:43 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf.tmpl, conf.rb: デフォルト値変更
	* controller.rb, master.rb, node.rb, p-filter.rb, processor.rb: ロ