@@ -1,0 +1,3 @@
+require 'mkmf'
+
+create_makefile("fairy/string_buffer")
