@@ -1,3 +1,8 @@
+Wed Mar  2 22:14:07 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* ext/string-buffer/extconf.rb, ext/string-buffer/string-buffer.c:
+	  StringBuffer追加
+
 Tue Mar  1 21:51:04 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* fairy.rb, here.rb, controller.rb, master.rb,
